--- a/package.json
+++ b/package.json
@@ -44,32 +44,34 @@
       "prettier --parser=typescript --write"
     ]
   },
+  "dependencies": {
+    "antd": "^5.12.8"
+  },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@testing-library/jest-dom": "^5",
-    "@testing-library/react": "^14",
-    "@types/jest": "^29",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/testing-library__jest-dom": "^5.14.5",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "@umijs/lint": "^4.0.0",
     "cross-env": "^7",
     "dumi": "^2.0.2",
     "eslint": "^8.23.0",
     "father": "^4.1.0",
     "husky": "^8.0.1",
-    "jest": "^29",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.0",
     "prettier-plugin-packagejson": "^2.2.18",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "stylelint": "^14.9.1",
-    "ts-node": "^10",
-    "typescript": "^4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "stylelint": "^16.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
